--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
     position: relative;
-    margin: 0 auto;
+    margin: 4em auto;
     box-sizing: border-box;
     width:calc(100% - 10em);
     height:calc(100% - 10em);
@@ -14,6 +14,4 @@ body {
 .gif-container {
   background: url(../images/smoker.gif)center no-repeat;
   background-size: cover;
-  box-sizing: border-box;
-  position: 0 4em;
 }
