--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,33 @@
-
-
 @font-face {
     font-family: EverAfter;
     src: url(EVERAFTE.TTF);
 }
 
-.gif-container {
-  position: relative;
-  margin: 4em auto;
-  box-sizing: border-box;
-  width:calc(100% - 10em);
-  height:calc(100% - 10em);
-
-  background: url(../images/smoker.gif)center no-repeat;
+.header {
+  background-image: url(../images/smoker.gif);
+  background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#bbque-logo {
+  position: absolute;
+  top: 2em;
+  left: 2em;
+  right: 2em;
+  bottom: 2em;
+  margin: auto;
+  width: calc(50% + 2em);
+  height: calc(50% + 2em);
+}
+
+.main-container{
+  font-family: EverAfter serif;
+  text-align: center;
 }
