--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  background-position: center;
   position: fixed;
   top: 0;
   left: 0;
