--- a/styles/main.css
+++ b/styles/main.css
@@ -19,10 +19,10 @@
 }
 #bbque-logo {
   position: absolute;
-  top: calc(100% + 2em);
-  left: calc(100% + 2em);
-  right: calc(100% + 2em);
-  bottom: calc(100% + 2em);
+  top: 2em;
+  left: 2em;
+  right: 2em;
+  bottom: 2em;
   margin: auto;
   width: calc(50% + 2em);
   height: calc(50% + 2em);
