--- a/styles/main.css
+++ b/styles/main.css
@@ -1,31 +1,14 @@
-@font-face {
-    font-family: EverAfter;
-    src: url(EVERAFTE.TTF);
-}
-
-.main-container {
-  background-image: url(../images/smoker.gif);
-  background-repeat: no-repeat;
+body {
+  background: url("../images/smoker.gif") center center no-repeat #000;
   background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-position: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#bbque-logo {
-  position: absolute;
-  top: 2em;
-  left: 2em;
-  right: 2em;
-  bottom: 2em;
-  margin: auto;
-  width: calc(50% + 2em);
-  height: calc(50% + 2em);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.cls-1{fill:red;stroke:#fff;stroke-miterlimit:10;}
+
+.bbq-image{
+  max-width: 400px;
+  margin: 2em auto;
+  display:block;
+}
