--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,70 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
 body {
-  background: url("../images/smoker.gif") center center no-repeat #000;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  min-height: 35rem;
+  margin-bottom: 4rem;
+  color: #000000;
+  background: #FFFFFF;
+  font-family: 'Oswald', sans-serif; }
+
+h2 {
+  font-size: 3em;
 }
-.bbq-image {
-  max-width: 400px;
-  margin: 2em auto;
-  display: block;
+
+.main__container {
+  max-width: 70rem;
+  margin: auto;
+  padding: 1rem 1rem;
+  text-align: center;
 }
+
+.logo {
+  width:20em;
+}
+
+.section{
+  padding-top: 7em;
+}
+
+.social-icon {
+  display: inline;
+  height: 5rem;
+  width: 5rem;
+  margin: 0.5em;
+  fill: #000000;
+  transition: fill 0.1s; }
+  .social-icon:hover {
+    fill: #FFFF00; }
+
+.bounce:hover {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: bounce;
+  animation-name: bounce; }
+
+@-webkit-keyframes bounce {
+  to {
+    -webkit-transform: translateY(0);
+    transform: translateY(0); }
+  50% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px); }
+  from {
+    -webkit-transform: translateY(0);
+    transform: translateY(0); } }
+
+@keyframes bounce {
+  to {
+    -webkit-transform: translateY(0);
+    transform: translateY(0); }
+  50% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px); }
+  from {
+    -webkit-transform: translateY(0);
+    transform: translateY(0); } }
